<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical"
    tools:context=".View.View_03_registrar_setor">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="#00aeff">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:background="@drawable/ic_novo_34dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txt_dialog_titulo_inserir_setor"
            android:id="@+id/textView28"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:paddingLeft="5dp"/>

    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edt_novo_nome_setor"
        android:hint="Setor:"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_quantidade_de_pessoas"
        android:id="@+id/textView7" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/edt_novo_qtd_pessoas_setor"
        android:layout_marginTop="5dp"
        android:text="0" />
    <EditText
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_novo_tipo_de_pessoas_setor"
        android:padding="10dp"
        android:lines="4"
        android:overScrollMode="always"
        android:scrollbarStyle="insideInset"
        android:minLines="3"
        android:gravity="bottom|left"
        android:scrollbars="vertical"
        android:layout_marginTop="5dp"
        android:hint="Tipos de pessoas..." />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1">
        <TableRow>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_cancelar"
                android:id="@+id/btn_cancelar_novo_setor" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_salvar"
                android:id="@+id/btn_salvar_novo_setor" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#FF14CFF1"></LinearLayout>

</LinearLayout>