<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/txt_codigo"
            android:id="@+id/textView23"
            android:layout_column="0"
            android:textColor="#000000"
            android:textSize="6pt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/txt_item_codigo_inspecao_tecnico"
            android:layout_column="1"
            android:textColor="#004cff"
            android:textSize="6pt" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/txt_data"
            android:id="@+id/textView24"
            android:layout_column="0"
            android:textColor="#000000"
            android:textSize="6pt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/txt_item_data_inicio_inspecao"
            android:layout_column="1"
            android:textColor="#004cff"
            android:textSize="6pt" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/txt_data_fim"
            android:id="@+id/textView25"
            android:layout_column="0"
            android:textColor="#000000"
            android:textSize="6pt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/txt_item_data_fim_inspecao"
            android:layout_column="1"
            android:textColor="#004cff"
            android:textSize="6pt" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/txt_nome_do_tecnico"
            android:id="@+id/textView26"
            android:layout_column="0"
            android:textColor="#000000"
            android:textSize="6pt"
            android:layout_marginRight="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/txt_item_nome_tecnico_inspecao"
            android:layout_column="1"
            android:textColor="#000000"
            android:textSize="6pt" />
    </TableRow>
</TableLayout>